--- a/Authorization.Core.UI/Areas/Authorization/Pages/V4/Role/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V4/Role/Index.cshtml
@@ -23,7 +23,7 @@
         <p>
             <a class="@classCreate" asp-page="Create">Create New</a>
         </p>
-        <table class="table table-sm">
+        <table class="table table-sm w-100">
             <thead>
                 <tr>
                     <th>
