--- a/Authorization.Core.UI/Areas/Authorization/Pages/V4/User/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V4/User/Delete.cshtml
@@ -61,10 +61,10 @@
                 @Html.DisplayFor(model => model.UserModel.PhoneNumber) &nbsp;
             </dd>
             <dt>
-                @Html.DisplayNameFor(model => model.UserModel.LockoutEnd)
+                @Html.DisplayNameFor(model => model.UserModel.LockoutEndUtc)
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.UserModel.LockoutEnd) &nbsp;
+                @Html.DisplayFor(model => model.UserModel.LockoutEndUtc) &nbsp;
             </dd>
             <dt>
                 @Html.DisplayNameFor(model => model.UserModel.AccessFailedCount)
