--- a/Authorization.Core.UI/Areas/Authorization/Pages/V4/User/Edit.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V4/User/Edit.cshtml
@@ -54,9 +54,9 @@
                         <span asp-validation-for="UserModel.PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="UserModel.LockoutEnd" class="control-label"></label>
-                        <input asp-for="UserModel.LockoutEnd" class="form-control" />
-                        <span asp-validation-for="UserModel.LockoutEnd" class="text-danger"></span>
+                        <label asp-for="UserModel.LockoutEndUtc" class="control-label"></label>
+                        <input asp-for="UserModel.LockoutEndUtc" class="form-control" />
+                        <span asp-validation-for="UserModel.LockoutEndUtc" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="UserModel.AccessFailedCount" class="control-label"></label>
