--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Delete.cshtml
@@ -51,8 +51,8 @@
                 <label asp-for="UserModel.PhoneNumber" class="control-label"></label>
             </div>
             <div class="form-floating">
-                <input class="form-control" id="UserModel_LockoutEnd" type="text" value="@Model.UserModel.LockoutEnd" disabled />
-                <label asp-for="UserModel.LockoutEnd" class="control-label"></label>
+                <input class="form-control" id="UserModel_LockoutEnd" type="text" value="@Model.UserModel.LockoutEndUtc" disabled />
+                <label asp-for="UserModel.LockoutEndUtc" class="control-label"></label>
             </div>
             <div class="form-floating">
                 <input class="form-control" id="UserModel_AccessFailedCount" type="text" value="@Model.UserModel.AccessFailedCount" disabled />
