--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Edit.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Edit.cshtml
@@ -44,9 +44,9 @@
                 <span class="text-danger" asp-validation-for="UserModel.PhoneNumber"></span>
             </div>
             <div class="form-floating">
-                <input class="form-control" asp-for="UserModel.LockoutEnd" autocomplete="tel" />
-                <label class="control-label" asp-for="UserModel.LockoutEnd"></label>
-                <span class="text-danger" asp-validation-for="UserModel.LockoutEnd"></span>
+                <input class="form-control" asp-for="UserModel.LockoutEndUtc" placeholder="" />
+                <label class="control-label" asp-for="UserModel.LockoutEndUtc"></label>
+                <span class="text-danger" asp-validation-for="UserModel.LockoutEndUtc"></span>
             </div>
             <div class="form-check">
                 <label class="form-check-label">
